from __future__ import annotations

from pathlib import Path

from reportlab.lib import colors
from reportlab.lib.enums import TA_CENTER
from reportlab.lib.pagesizes import A4
from reportlab.lib.styles import ParagraphStyle, getSampleStyleSheet
from reportlab.lib.units import mm
from reportlab.pdfbase import pdfmetrics
from reportlab.pdfbase.cidfonts import UnicodeCIDFont
from reportlab.platypus import PageBreak, SimpleDocTemplate, Spacer

from build_delivery_artifacts import PROJECT_NAME, ROOT, bullet_list, make_table, p


DOC_VERSION = "v2.5"
DOC_DATE = "2026-05-27"
MD_PATH = ROOT / f"{PROJECT_NAME}_技术方案手册_{DOC_VERSION}_正式工程版.md"
PDF_PATH = ROOT / f"{PROJECT_NAME}_技术方案手册_{DOC_VERSION}_正式工程版.pdf"


MD_CONTENT = """# AI智能客服售前跟进系统 技术方案手册（正式工程版）

版本：v2.5

日期：2026-05-27

适用范围：第一期正式工程版本。

说明：本版根据最新业务沟通重构会话状态机：取消 AI 固定轮次限制，改为“AI持续接待 / 转人工 / 等待用户回复 / 召回 / 等待销售回复超时提醒”的长期跟进模型；同时将微信备注短码定义为系统托管开关。

## 1. 核心变化

| 事项 | 旧口径 | 新口径 |
|---|---|---|
| AI回复轮次 | 有固定轮次限制，达到上限后进入观望。 | 取消轮次上限。只要未拒绝、未关闭、未转人工且风控允许，客户继续聊，AI继续回复。 |
| 等待用户回复 | 主要用于观望客户召回。 | AI回复、人工回复、召回回复后，都进入等待用户回复状态。 |
| 自动召回 | 只覆盖观望客户，每客户最多一次。 | 覆盖所有等待用户回复的会话；超过N天未回复可再次召回，直到用户回复、拒绝或关闭。 |
| 转人工后销售未回复 | 原方案不做二次提醒。 | 进入等待销售回复状态；超过N天销售未回复，飞书通知销售。 |
| Worker职责 | 容易被理解为扫所有会话。 | Worker只采集系统绑定会话的微信事实；服务端负责状态机和超时判断。 |
| 备注短码 | 只作为绑定识别手段。 | 备注短码成为系统托管开关：移除短码=销售接手并关闭自动跟进；线下好友补上短码=进入系统跟进。 |

## 2. 总体分工

```text
Worker = 微信事实采集器 + 微信动作执行器
服务端 = 状态机 + 规则判断器 + 任务调度器
```

Worker 上报事实：

- 客户新文字消息。
- 客户新图片消息。
- 销售手机端同步到桌面端的人工回复。
- AI/召回发送成功或失败。
- 图片另存成功或失败。
- 微信登录、窗口、风控提示、发送异常。

服务端负责判断：

- 客户消息是否由 AI 回复。
- 是否需要转人工。
- 是否进入等待用户回复。
- 是否达到召回时间。
- 是否生成 follow_up 任务。
- 是否等待销售回复超时并发送飞书通知。
- 是否停止自动动作。

## 2.1 技术栈与工程实现约束

本期按正式工程产品实施，不按演示 Demo 实施。技术栈选择遵循：优先复用 OmniAuto 现有 Python 能力、减少跨语言链路、保证任务可恢复、错误可定位、部署可复制、二期可演进。

| 层级 | 选型 | 说明 |
|---|---|---|
| 服务端语言/框架 | Python 3.11+ / FastAPI | 与 OmniAuto、AI 编排、RPA 生态一致；接口清晰，便于快速工程化。 |
| ORM/迁移 | SQLAlchemy 2.x / Alembic | 数据模型、状态机、任务表必须可迁移、可回滚、可审计。 |
| 主数据库 | PostgreSQL 15+ | 作为线索、任务、会话、状态机、错误码、审计日志的唯一事实源。 |
| 任务调度 | PostgreSQL 任务表 + lease 锁 + APScheduler/服务端扫描进程 | 第一阶段不引入复杂 MQ；任务状态持久化，服务重启后可恢复，避免重复发送。 |
| 控制面前端 | React + TypeScript + Vite + Ant Design | 适合后台管理、表格、表单、配置、日志和任务看板。 |
| Worker 桌面端 | Python 3.11+ / PySide6 / wxauto4 或 UIAutomation / PyInstaller | 复用现有 RPA 能力，做成 Windows 可执行程序，界面参照视频中的执行台效果。 |
| Worker 本地存储 | SQLite + 本地文件目录 | 保存本地配置、运行日志、图片临时文件、未确认发送记录；服务端仍是最终事实源。 |
| 通信方式 | HTTPS REST + Worker 主动轮询/心跳 | 商家电脑不暴露公网端口；Worker 主动拉任务、上报事实和心跳。 |
| AI 文本 | OmniAuto AI Engine + DeepSeek API | OmniAuto 负责上下文、RAG、Guard、编排；DeepSeek 负责文本生成。 |
| 图片理解 | 千问视觉模型 + ImageIntent | 识别图片内容、截图信息、车型线索和置信度；低置信转人工。 |
| 知识检索 | OmniAuto RAG + 关键词/规则混合检索 | 先基于现有能力工程化；Dify/FastGPT 仅预留 Adapter，不作为第一期核心运行时。 |
| 车源索引 | 大风车 API + 本地 vehicle_index | 外部接口同步原始车源，AI 只读取白名单字段。 |
| 文件存储 | Worker 本地图片目录 + 服务端必要文件存储 | 不做长期图片库；服务端仅保存必要文件、识别结果和证据。 |
| 日志与错误码 | JSON 结构化日志 + error_code 字典 + trace_id | 控制面、Worker、服务端日志使用同一错误码体系，便于运维排障。 |
| 部署 | Docker Compose 部署服务端；Worker 以 Windows 安装包/可执行文件交付 | 第一阶段不使用 Kubernetes；保证单机可复制部署和备份恢复。 |
| 测试 | pytest + 接口集成测试 + Worker 端到端录屏/日志验收 | 核心验收看状态机、幂等、防重复发送、错误码、微信串行操作。 |

明确不采用：

- 不把 Dify 作为第一期核心对话运行时，只预留后续 Adapter。
- 不使用 Kubernetes、服务网格、复杂微服务拆分。
- 不在第一期做多商户 SaaS、复杂权限、计费和高可用集群。
- 不读取或破解微信数据库，不使用非公开微信协议。

## 3. 会话主状态

| 状态 | 含义 | 当前等待谁 | 允许动作 |
|---|---|---|---|
| `new` | 线索刚进入系统。 | 系统分配 | 分配销售、绑定Worker。 |
| `assigned` | 已分配销售和Worker。 | 系统生成任务 | 创建加好友任务。 |
| `add_friend_pending` | 待加好友。 | Worker执行 | 手机号搜索、发送申请、写初始备注。 |
| `add_friend_sent` | 好友申请已发出。 | 客户通过/人工确认 | 等待成为好友或失败处理。 |
| `friend_added` | 已成为好友。 | Worker绑定会话 | 绑定微信会话，进入AI接待。 |
| `ai_active` | AI正常接待。 | 客户/AI | 客户来消息后AI可持续回复，不设轮次上限。 |
| `waiting_user_reply` | 我方已经回复，等待客户回。 | 客户 | 服务端到期生成召回任务；Worker监听客户是否回复。 |
| `recalled_waiting_user` | AI已发过召回，继续等待客户回。 | 客户 | 到下一轮召回周期后可再次召回。 |
| `waiting_sales_reply` | AI已转人工，等待销售回复客户。 | 销售 | 超过N天销售未回，服务端飞书通知销售。 |
| `sales_replied_waiting_user` | 销售已回复，等待客户回。 | 客户 | 到期可由AI发送召回内容。 |
| `rejected` | 客户明确拒绝或黑名单。 | 无 | 不加好友、不回复、不召回。 |
| `closed` | 系统停止自动跟进。常见原因包括销售移除备注短码、销售线下接手、人工确认结束。 | 无 | 不自动回复、不召回、不飞书提醒、不主动关注。 |

## 4. 状态流转规则

### 4.1 AI持续接待

```text
客户发消息 -> Worker上报message_event -> 服务端判断可AI回复 -> AI生成回复 -> Worker发送 -> sent_ack -> 状态=waiting_user_reply
```

规则：

- AI不再按句数停止。
- AI是否继续聊由风控、客户意图、模型置信度、会话状态决定。
- 命中高风险、高意向、模型失败、图片低置信或证据不足时，不继续自动回复，转人工。

### 4.2 等待用户回复

任何我方回复成功后，都进入等待用户回复：

```text
AI回复成功 -> waiting_user_reply
AI召回成功 -> recalled_waiting_user
销售人工回复成功 -> sales_replied_waiting_user
```

如果客户回复：

```text
未转人工会话 -> ai_active
已转人工会话 -> waiting_sales_reply 或保持人工负责，由销售继续处理
```

如果客户明确拒绝：

```text
任意状态 -> rejected
```

### 4.3 自动召回

召回不再只属于观望客户，而属于“等待用户回复”类状态。

触发条件：

```text
status in (waiting_user_reply, recalled_waiting_user, sales_replied_waiting_user)
且 now - last_outbound_at >= N天
且 last_inbound_at为空 或 last_inbound_at < last_outbound_at
且 未拒绝
且 未关闭
且 不在黑名单
且 未命中静默时段
且 未超过每日召回上限
且 未超过单客户召回策略限制
```

动作：

```text
服务端创建follow_up_task
Worker领取任务
Worker发送AI召回内容
Worker上报sent_ack
服务端更新last_recall_at、recall_count、last_outbound_at
状态=recalled_waiting_user
```

召回次数口径：

- 业务上支持持续召回，直到用户回复、拒绝或关闭。
- 工程上必须保留配置项：召回间隔、每日召回上限、单客户最大召回次数、静默时段。
- 如果项目方配置为“不限次数”，系统也必须受每日上限和静默时段约束。

### 4.4 转人工与销售超时提醒

触发转人工：

```text
客户高意向/高风险/模型失败/图片低置信/车源证据不足 -> waiting_sales_reply
```

转人工后：

- AI不再自由回复客户新消息。
- Worker继续监听该绑定会话，识别销售手机端同步到桌面端的人工回复。
- 销售回复后，状态进入 `sales_replied_waiting_user`。

销售超时未回复：

```text
status=waiting_sales_reply
且 now - handoff_at >= N天
且 sales_first_reply_at为空
-> 服务端触发飞书通知销售
```

飞书口径：

- 只做通知。
- 不做按钮。
- 不做二次发送功能。
- 不单独增加角色权限。
- 失败时记录错误日志，由项目方人工查看处理。

### 4.5 备注短码作为系统托管开关

第一期不额外给销售做“关闭客户”的后台工具。销售在微信里工作的事实优先，备注短码作为最轻量的控制入口。

规则：

```text
微信备注仍包含系统短码 -> 系统继续托管该会话
微信备注不再包含系统短码 -> 视为销售已接手/不需要系统继续自动跟进 -> status=closed
线下好友备注新增系统短码 -> Worker识别并绑定 -> 进入系统跟进
```

进入 `closed` 后：

- AI 不再自动回复。
- 不再生成召回任务。
- 不再触发销售超时飞书提醒。
- Worker 不再主动关注该会话。
- 保留关闭原因：`close_reason=remark_code_removed`。

注意：备注短码消失不代表客户拒绝，所以不进入 `rejected`。它只代表系统自动化退出，由销售自行跟进。

## 5. 备注短码工具与线下线索接入

### 5.1 工具目标

解决销售线下获得客户、自己添加微信好友后，系统无法启动跟进的问题。

工具只做一件事：

```text
生成系统可识别的备注短码和推荐备注名
```

### 5.2 使用流程

```text
销售线下获得新客户 -> 销售自己加微信好友 -> 在备注短码工具生成新短码 -> 销售把微信好友备注改成包含短码 -> Worker补偿扫描识别短码 -> 服务端创建/绑定线索和会话 -> 进入ai_active或waiting_user_reply
```

### 5.3 短码工具输入与输出

| 项目 | 说明 |
|---|---|
| 输入 | 销售、手机号或手机号后4位、来源、可选客户备注、可选车型/需求。 |
| 输出 | `remark_code`、推荐微信备注名、线索记录、绑定状态。 |
| 推荐备注格式 | `CJ-销售简称-短码-手机号后4位`，具体命名规则可配置。 |
| 唯一性 | `remark_code` 全局唯一，不能重复分配给多个有效客户；同一客户恢复跟进时优先找回原短码，不生成新短码。 |
| 有效性 | 新短码生成后状态为待绑定；Worker识别到微信备注包含短码后完成绑定。 |

### 5.4 短码工具模式

| 模式 | 使用场景 | 处理规则 |
|---|---|---|
| 生成新短码 | 销售线下获得的新客户，系统里没有有效线索或会话。 | 创建新Lead/RemarkCode，等待Worker识别绑定。 |
| 找回原短码 | 销售误删备注短码，或短码被移除后又希望AI恢复跟进。 | 按销售、手机号后4位、客户备注等查询原Lead/Conversation，复制原推荐备注，不创建新客户。 |
| 作废短码 | 绑定错客户、短码泄露、重复绑定等异常。 | 管理员或项目负责人处理；作废后原短码不可再绑定新客户，必要时人工合并或迁移历史。 |

恢复原则：

```text
同一个客户恢复系统跟进，优先使用原remark_code。
不要重新生成新短码，避免历史对话、AI/人工记录、召回次数和接管记录断裂。
```

原短码恢复后，服务端可继续读取原 `conversation_id` 下的历史记录，包括：

- AI回复记录。
- 销售人工回复记录。
- 召回记录。
- 转人工记录。
- 风控与Guard记录。

恢复后的状态由服务端根据上下文判断：

| 恢复条件 | 恢复后建议状态 |
|---|---|
| 客户刚发了新消息 | `ai_active` 或按风控转人工。 |
| 我方最后发过消息且客户未回复 | `waiting_user_reply`。 |
| 原会话处于转人工链路 | `waiting_sales_reply`，除非人工明确恢复AI。 |
| 客户已 `rejected` | 不自动恢复，需人工确认。 |

### 5.5 Worker识别规则

- Worker只扫描系统要求关注的候选会话，不扫描全量微信。
- 识别到备注包含有效短码后，上报 `remark_code_detected`。
- 服务端根据短码绑定 Lead / Conversation / Sales / Worker。
- 短码绑定成功后，后续消息进入正常 AI 跟进链路。
- 已绑定会话后续发现短码被移除，上报 `remark_code_removed`，服务端进入 `closed`，`close_reason=remark_code_removed`。
- `closed` 后如果原短码再次出现在该销售微信好友备注中，Worker上报 `remark_code_detected`，服务端按原Lead/Conversation恢复系统跟进。

## 6. Worker与服务端定时扫描分工

| 扫描类型 | 谁做 | 扫什么 | 结果 |
|---|---|---|---|
| 微信事实监听 | Worker | 系统绑定会话的新消息、图片、销售人工回复、微信异常。 | 上报 message_event / image_event / sales_reply_event / wechat_error。 |
| 微信补偿扫描 | Worker | 绑定会话中近期活跃、等待用户回复、等待销售回复的会话。 | 防止漏消息，补充上报事实。 |
| 召回到期扫描 | 服务端 | 数据库中的等待用户回复类状态。 | 创建 follow_up_task。 |
| 销售超时扫描 | 服务端 | `waiting_sales_reply` 且销售未回复的会话。 | 发送飞书通知销售。 |
| Worker健康扫描 | 服务端 | Worker heartbeat、last_sync_at、当前任务。 | 标记离线、卡住、异常。 |
| 发送结果恢复 | Worker + 服务端 | `sending`、`unknown_send_result`、超时任务。 | 防止重复发送，必要时人工确认。 |

结论：

```text
Worker定时扫微信事实。
服务端定时扫数据库状态。
Worker不判断业务规则。
服务端不直接操作微信。
```

### 6.1 微信UI操作串行约束

所有模拟人操作微信桌面端的动作必须全局串行，统一通过 `Local WeChat UI Lock` 控制。不得并行操作微信窗口。

必须串行的动作包括：

- 手机号搜索、点击加好友、填写好友申请语、写备注。
- 打开/切换微信会话、滚动聊天记录、读取需要切换窗口才能确认的信息。
- 点开图片、另存图片。
- 输入AI回复、发送AI回复、发送召回文案。
- 通过备注短码绑定会话、确认短码移除、确认发送结果。

允许并行的动作仅限非微信UI逻辑：

- 等待AI生成。
- RAG检索、车源索引查询、大风车同步。
- 图片上传和视觉识别。
- 服务端状态机判断、定时扫描数据库。
- 飞书通知。
- 日志写入、任务排队、错误记录。

执行规则：

```text
任何任务只要需要操作微信桌面端，
必须先获取 Local WeChat UI Lock，
执行完成或失败后释放锁，
下一个微信UI任务才能继续。
```

任务优先级可以配置，但不改变串行原则：

```text
chat_reply > add_friend > follow_up
```

## 7. 核心数据字段

| 字段 | 含义 | 来源 |
|---|---|---|
| `last_inbound_at` | 最近客户消息时间。 | Worker上报客户消息。 |
| `last_outbound_at` | 最近我方发出消息时间。 | Worker上报AI/召回/人工发送事实。 |
| `last_ai_reply_at` | 最近AI回复时间。 | Worker发送AI成功后上报。 |
| `last_recall_at` | 最近召回时间。 | Worker发送召回成功后上报。 |
| `last_sales_reply_at` | 最近销售人工回复时间。 | Worker识别销售人工消息后上报。 |
| `sales_first_reply_at` | 转人工后销售首次回复时间。 | Worker识别销售人工消息后上报。 |
| `handoff_at` | 进入等待销售回复时间。 | 服务端转人工时写入。 |
| `recall_count` | 已召回次数。 | 服务端根据sent_ack更新。 |
| `ai_enabled` | 是否允许AI自由接待。 | 服务端状态机维护。 |
| `owner` | 当前会话责任方：ai / sales。 | 服务端状态机维护。 |
| `remark_code` | 系统识别微信会话的短码。 | 服务端生成，Worker从备注中识别。 |
| `close_reason` | 关闭自动跟进原因。 | 备注短码移除、人工关闭、其他。 |

## 8. 任务类型

| 任务 | 触发方 | 执行方 | 说明 |
|---|---|---|---|
| `add_friend` | 服务端 | Worker | 手机号搜索、发送好友申请、写初始备注。 |
| `chat_reply` | 服务端 | Worker | 执行AI回复动作。 |
| `follow_up` | 服务端 | Worker | 发送AI召回内容。 |
| `save_image` | Worker | Worker | 点开并另存客户图片。 |
| `handoff_notify` | 服务端 | 服务端 | 飞书通知销售；不需要Worker操作微信。 |
| `generate_remark_code` | 服务端/控制面 | 服务端 | 为线下好友生成系统短码和推荐备注名。 |
| `recover_remark_code` | 服务端/控制面 | 服务端 | 查询并复制原短码，用于误删备注或恢复系统跟进。 |
| `bind_by_remark_code` | Worker上报 | 服务端 | Worker识别备注短码后绑定线索和会话。 |

## 9. 幂等与防重复

| 对象 | 约束 |
|---|---|
| `message_event` | `unique(worker_id, conversation_id, dedupe_key)` |
| `message_batch` | 同一 `conversation_id` 同一时间最多一个 active batch。 |
| `reply_action` | Worker只能执行当前有效 `reply_action_id`。 |
| `send_receipt` | `unique(reply_action_id)`，同一动作只能确认一次。 |
| `follow_up_task` | 召回任务按 `conversation_id + recall_round + rule_id` 去重。 |
| `handoff_notify` | 同一销售超时提醒周期只发送一次飞书通知。 |
| `remark_code` | 全局唯一；同一短码只能绑定一个有效会话。 |
| `recover_remark_code` | 恢复跟进必须优先使用原短码；不得为同一客户直接生成第二个有效短码。 |

恢复规则：

- Worker重启后必须先向服务端确认状态。
- `sending` 超时进入 `unknown_send_result`，不自动补发。
- 客户新消息到来时，未发送的旧AI回复必须作废并重新生成。

## 10. 错误码与运维可解释性原则

所有报错、失败、跳过、暂停、异常恢复都必须有错误码和错误码解释说明，便于后续运维、排障和验收复盘。

错误记录至少包含：

| 字段 | 说明 |
|---|---|
| `error_code` | 机器可识别错误码，稳定不随文案变化。 |
| `error_message` | 面向运维/实施人员的简短说明。 |
| `error_detail` | 原始异常、第三方返回、窗口标题、截图路径等补充信息。 |
| `severity` | S1/S2/S3/S4 或 info/warn/error/blocker。 |
| `module` | 出错模块，如 Worker、WeChat、AI、Vision、大风车、飞书、RAG、Guard。 |
| `suggested_action` | 建议处理方式，如重试、人工确认、检查登录、检查API Key、联系接口方。 |
| `trace_id` | 关联任务、会话、消息、reply_action、follow_up_task、handoff_event的追踪ID。 |

错误码命名建议：

```text
WECHAT_LOGIN_EXPIRED
WECHAT_UI_ELEMENT_NOT_FOUND
WECHAT_RATE_LIMIT
WORKER_UI_LOCK_TIMEOUT
AI_MODEL_TIMEOUT
VISION_LOW_CONFIDENCE
DFC_AUTH_FAILED
FEISHU_NOTIFY_FAILED
RAG_NO_EVIDENCE
REMARK_CODE_CONFLICT
REMARK_CODE_REMOVED
SEND_RESULT_UNKNOWN
```

要求：

- 控制面、Worker执行台、日志审计、验收问题单中展示同一错误码。
- 错误码必须有说明文档，不允许只展示“未知错误”。
- 第三方接口原始错误可以保留，但必须映射为系统内部错误码。
- 能恢复的错误给出建议动作；不能自动恢复的错误必须提示人工处理。

## 11. 模块影响

| 模块 | 调整 |
|---|---|
| AI对话 | 取消轮次上限；AI持续接待直到转人工、拒绝、关闭或风控禁止。 |
| 自动召回 | 从观望召回升级为等待用户回复召回；支持多轮，次数和间隔配置化。 |
| 人工接管 | 转人工后进入等待销售回复；销售超时未回由服务端飞书通知。 |
| Worker | 只监听系统绑定会话；采集事实，不做业务状态判断。 |
| Worker/RPA串行化 | 所有微信桌面端模拟人操作必须通过Local WeChat UI Lock串行执行；非UI任务才允许并行。 |
| 服务端 | 维护完整状态机；负责召回到期和销售超时扫描。 |
| 飞书 | 只做通知和错误日志，不做按钮和复杂权限。 |
| 备注短码工具 | 支持线下好友进入系统；支持销售通过移除短码让系统停止自动跟进。 |
| 错误码体系 | 所有异常必须有错误码、解释、建议动作和trace_id，方便运维排障。 |

## 12. 新验收重点

| 编号 | 用例 | 通过标准 |
|---|---|---|
| S-01 | AI连续多轮接待 | 客户持续提问时，AI可持续回复，不因固定轮次停止。 |
| S-02 | AI回复后等待用户 | AI发送成功后状态进入 `waiting_user_reply`。 |
| S-03 | 人工回复后等待用户 | 销售人工回复被Worker识别后，状态进入 `sales_replied_waiting_user`。 |
| S-04 | 等待用户超时召回 | 超过N天客户未回复，服务端生成 `follow_up_task`，Worker发送召回。 |
| S-05 | 多轮召回 | 召回后客户仍未回复，到下一周期可再次召回。 |
| S-06 | 用户回复终止召回 | 客户回复后，召回条件失效。 |
| S-07 | 用户拒绝停止自动动作 | 客户拒绝后，不回复、不召回、不加好友。 |
| S-08 | 转人工等待销售 | AI转人工后进入 `waiting_sales_reply`，AI不再自由回复。 |
| S-09 | 销售超时飞书通知 | 销售超过N天未回复，服务端发送飞书通知并记录结果。 |
| S-10 | Worker与服务端扫描分工 | Worker上报微信事实；服务端根据数据库状态生成召回和销售提醒。 |
| S-11 | 移除备注短码关闭自动跟进 | Worker发现已绑定会话备注短码消失后，服务端进入 `closed`，AI/召回/飞书提醒停止。 |
| S-12 | 线下好友加短码启动跟进 | 销售用短码工具生成备注并改微信备注后，Worker识别短码并绑定会话，系统开始跟进。 |
| S-13 | 找回原短码恢复跟进 | 销售误删短码后，通过短码工具找回原短码并加回微信备注，系统恢复原会话和历史上下文。 |
| S-14 | 微信UI操作串行 | 同时存在多个微信UI任务时，Worker必须按Local WeChat UI Lock串行执行。 |
| S-15 | 错误码可解释 | 任意失败、暂停、跳过、异常都必须展示稳定错误码、错误说明和建议处理动作。 |
"""


def make_styles():
    styles = getSampleStyleSheet()
    body = ParagraphStyle("CNBodyV24", parent=styles["BodyText"], fontName="STSong-Light", fontSize=8.3, leading=11.4, spaceAfter=3, textColor=colors.HexColor("#1F2937"))
    small = ParagraphStyle("CNSmallV24", parent=body, fontSize=6.6, leading=8.4, spaceAfter=1.5)
    title = ParagraphStyle("CNTitleV24", parent=styles["Title"], fontName="STSong-Light", fontSize=19, leading=25, alignment=TA_CENTER, textColor=colors.HexColor("#0B2545"), spaceAfter=8)
    subtitle = ParagraphStyle("CNSubtitleV24", parent=body, fontSize=10, leading=14, alignment=TA_CENTER, textColor=colors.HexColor("#4B5563"), spaceAfter=8)
    h1 = ParagraphStyle("CNH1V24", parent=styles["Heading1"], fontName="STSong-Light", fontSize=12, leading=15, textColor=colors.HexColor("#1F4E78"), spaceBefore=7, spaceAfter=4)
    code = ParagraphStyle("CNCodeV24", parent=body, fontName="STSong-Light", fontSize=7.2, leading=9.4, backColor=colors.HexColor("#F4F6F9"), borderColor=colors.HexColor("#E5E7EB"), borderWidth=0.3, borderPadding=4, spaceBefore=2, spaceAfter=4)
    return body, small, title, subtitle, h1, code


def tbl(data, widths, style, repeat=1, font_size=6.7):
    return make_table([[p(str(c), style) for c in row] for row in data], widths, repeat=repeat, font_size=font_size)


def generate_md() -> None:
    MD_PATH.write_text(MD_CONTENT, encoding="utf-8")


def generate_pdf() -> None:
    pdfmetrics.registerFont(UnicodeCIDFont("STSong-Light"))
    body, small, title, subtitle, h1, code = make_styles()
    doc = SimpleDocTemplate(str(PDF_PATH), pagesize=A4, rightMargin=12 * mm, leftMargin=12 * mm, topMargin=14 * mm, bottomMargin=13 * mm, title=f"{PROJECT_NAME} {DOC_VERSION}")
    story = []
    story.append(Spacer(1, 8 * mm))
    story.append(p(PROJECT_NAME, title))
    story.append(p("技术方案手册（正式工程版）", subtitle))
    story.append(tbl([
        ["文档版本", DOC_VERSION],
        ["文档日期", DOC_DATE],
        ["适用范围", "第一期正式工程版本"],
        ["核心变化", "取消AI轮次上限；等待用户回复触发多轮召回；转人工后销售超时飞书通知；备注短码作为系统托管开关。"],
    ], [32 * mm, 138 * mm], body, repeat=0, font_size=8.4))
    story.append(PageBreak())

    story.append(p("1. 核心变化", h1))
    story.append(tbl([
        ["事项", "旧口径", "新口径"],
        ["AI回复轮次", "有固定轮次限制。", "取消轮次上限，未拒绝、未关闭、未转人工且风控允许时持续接待。"],
        ["等待用户回复", "主要用于观望召回。", "AI回复、人工回复、召回回复后都进入等待用户回复。"],
        ["自动召回", "观望客户一次召回。", "等待用户回复类状态均可召回，支持多轮，受配置限制。"],
        ["销售超时", "不做提醒。", "转人工后销售N天未回复，服务端飞书通知。"],
        ["Worker职责", "可能被理解为扫全微信。", "只采集系统绑定会话事实，服务端负责判断。"],
        ["备注短码", "只作为绑定识别手段。", "移除短码=关闭自动跟进；线下好友补上短码=进入系统跟进。"],
    ], [29 * mm, 57 * mm, 84 * mm], small))

    story.append(p("2. 技术栈与工程实现约束", h1))
    story.append(p("本期按正式工程产品实施，不按演示Demo实施。技术栈选择遵循：优先复用OmniAuto现有Python能力、减少跨语言链路、保证任务可恢复、错误可定位、部署可复制、二期可演进。", body))
    story.append(tbl([
        ["层级", "选型", "说明"],
        ["服务端", "Python 3.11+ / FastAPI / SQLAlchemy / Alembic", "状态机、任务调度、API、审计日志统一在服务端实现。"],
        ["数据库", "PostgreSQL 15+", "线索、任务、会话、状态、错误码和审计日志的唯一事实源。"],
        ["任务调度", "PostgreSQL任务表 + lease锁 + APScheduler/扫描进程", "第一阶段不引入复杂MQ；任务可恢复，防重复发送。"],
        ["控制面", "React + TypeScript + Vite + Ant Design", "适合后台表格、表单、配置、任务看板和日志查询。"],
        ["Worker桌面端", "Python 3.11+ / PySide6 / wxauto4或UIAutomation / PyInstaller", "复用现有RPA能力，交付Windows执行台程序。"],
        ["Worker本地存储", "SQLite + 本地文件目录", "保存本地配置、运行日志、图片临时文件和未确认发送记录。"],
        ["通信", "HTTPS REST + Worker主动轮询/心跳", "商家电脑不暴露公网端口；Worker拉任务、上报事实和心跳。"],
        ["AI文本", "OmniAuto AI Engine + DeepSeek API", "OmniAuto负责上下文、RAG、Guard、编排；DeepSeek负责生成。"],
        ["图片理解", "千问视觉模型 + ImageIntent", "识别图片内容、截图信息、车型线索和置信度；低置信转人工。"],
        ["知识检索", "OmniAuto RAG + 关键词/规则混合检索", "Dify/FastGPT仅预留Adapter，不作为第一期核心运行时。"],
        ["车源", "大风车API + 本地vehicle_index", "同步原始车源，AI只读取白名单字段。"],
        ["日志错误码", "JSON结构化日志 + error_code字典 + trace_id", "控制面、Worker、服务端日志使用同一错误码体系。"],
        ["部署测试", "Docker Compose服务端 + Windows Worker安装包；pytest/接口集成/端到端验收", "不使用Kubernetes；强调可复制部署和可验收。"],
    ], [28 * mm, 58 * mm, 84 * mm], small))
    story.append(p("明确不采用：Dify作为第一期核心对话运行时、Kubernetes、服务网格、复杂微服务拆分、多商户SaaS、复杂权限、计费、高可用集群、读取或破解微信数据库、非公开微信协议。", body))

    story.append(p("3. 会话主状态", h1))
    story.append(tbl([
        ["状态", "含义", "当前等待谁", "允许动作"],
        ["ai_active", "AI正常接待。", "客户/AI", "客户来消息后AI持续回复，不设轮次上限。"],
        ["waiting_user_reply", "AI已回复，等待客户回。", "客户", "到期生成召回任务。"],
        ["recalled_waiting_user", "AI已发召回，继续等待客户回。", "客户", "到下一周期可再次召回。"],
        ["waiting_sales_reply", "AI已转人工，等待销售回复客户。", "销售", "销售超时未回则飞书通知。"],
        ["sales_replied_waiting_user", "销售已回复，等待客户回。", "客户", "到期可由AI发送召回内容。"],
        ["rejected", "客户拒绝或黑名单。", "无", "停止自动动作。"],
        ["closed", "系统停止自动跟进，常见原因包括销售移除备注短码、销售线下接手、人工确认结束。", "无", "停止AI、召回、飞书提醒和主动关注。"],
    ], [37 * mm, 57 * mm, 30 * mm, 46 * mm], small))

    story.append(p("4. 状态流转规则", h1))
    story.append(p("客户发消息 -> Worker上报message_event -> 服务端判断可AI回复 -> AI生成回复 -> Worker发送 -> sent_ack -> 状态=waiting_user_reply。命中高风险、高意向、模型失败、图片低置信或证据不足时，进入waiting_sales_reply。", code))
    story.append(p("等待用户回复超过N天且客户未回复、未拒绝、未关闭、未命中静默和上限规则时，服务端创建follow_up_task；Worker发送AI召回内容，发送成功后状态=recalled_waiting_user。", code))
    story.append(p("waiting_sales_reply超过N天且sales_first_reply_at为空时，服务端发送飞书通知销售。飞书只做通知和错误日志，不做按钮、二次发送功能或复杂权限。", code))

    story.append(p("5. 备注短码工具与线下线索接入", h1))
    story.append(p("第一期不额外给销售做关闭客户的后台工具。备注短码作为系统托管开关：备注仍包含短码，系统继续托管；备注移除短码，系统进入closed；线下好友补上短码，Worker识别后进入系统跟进。", body))
    story.append(tbl([
        ["场景", "规则", "结果"],
        ["销售移除短码", "已绑定会话备注不再包含remark_code。", "status=closed，AI/召回/销售超时提醒全部停止。"],
        ["线下好友启动", "销售用短码工具生成remark_code，并把好友备注改成包含短码。", "Worker识别短码并上报，服务端创建/绑定线索和会话。"],
        ["短码唯一性", "remark_code全局唯一，不能绑定多个有效会话。", "避免串客和误绑定。"],
        ["短码消失含义", "表示销售接手或不需要系统继续管。", "不等于客户拒绝，不进入rejected。"],
    ], [32 * mm, 82 * mm, 56 * mm], small))

    story.append(p("6. Worker与服务端定时扫描分工", h1))
    story.append(tbl([
        ["扫描类型", "谁做", "扫什么", "结果"],
        ["微信事实监听", "Worker", "绑定会话的新消息、图片、销售人工回复、微信异常。", "上报事实事件。"],
        ["微信补偿扫描", "Worker", "近期活跃、等待用户回复、等待销售回复的绑定会话。", "防漏消息。"],
        ["召回到期扫描", "服务端", "数据库中的等待用户回复类状态。", "创建follow_up_task。"],
        ["销售超时扫描", "服务端", "waiting_sales_reply且销售未回复的会话。", "飞书通知销售。"],
        ["Worker健康扫描", "服务端", "heartbeat、last_sync_at、当前任务。", "标记离线或卡住。"],
    ], [29 * mm, 23 * mm, 72 * mm, 46 * mm], small))

    story.append(p("7. 微信UI操作串行约束", h1))
    story.append(p("所有模拟人操作微信桌面端的动作必须全局串行，统一通过Local WeChat UI Lock控制。不得并行操作微信窗口。非微信UI逻辑可以并行，例如等待AI生成、RAG检索、图片上传、服务端状态机判断、飞书通知和日志写入。", body))
    story.append(tbl([
        ["类别", "动作", "规则"],
        ["必须串行", "手机号搜索、加好友、写备注、切换会话、点开图片、另存图片、输入/发送回复、发送召回、确认短码新增/移除。", "必须先获取Local WeChat UI Lock，完成或失败后释放。"],
        ["允许并行", "等待AI生成、RAG/车源检索、图片上传和视觉识别、服务端定时扫描、飞书通知、日志写入。", "不操作微信窗口，可并行。"],
        ["优先级", "chat_reply、add_friend、follow_up。", "优先级可配置，但不改变微信UI串行原则。"],
    ], [28 * mm, 92 * mm, 50 * mm], small))

    story.append(p("8. 核心数据字段", h1))
    story.append(tbl([
        ["字段", "含义", "来源"],
        ["last_inbound_at", "最近客户消息时间。", "Worker上报客户消息。"],
        ["last_outbound_at", "最近我方发出消息时间。", "Worker上报AI/召回/人工发送事实。"],
        ["last_recall_at", "最近召回时间。", "Worker发送召回成功后上报。"],
        ["sales_first_reply_at", "转人工后销售首次回复时间。", "Worker识别销售人工消息后上报。"],
        ["handoff_at", "进入等待销售回复时间。", "服务端转人工时写入。"],
        ["recall_count", "已召回次数。", "服务端根据sent_ack更新。"],
        ["owner", "当前责任方ai/sales。", "服务端状态机维护。"],
        ["remark_code", "系统识别微信会话的短码。", "服务端生成，Worker从备注中识别。"],
        ["close_reason", "关闭自动跟进原因。", "备注短码移除、人工关闭、其他。"],
    ], [42 * mm, 80 * mm, 48 * mm], small))

    story.append(p("9. 错误码与运维可解释性原则", h1))
    story.append(p("所有报错、失败、跳过、暂停、异常恢复都必须有稳定错误码和错误码解释说明。控制面、Worker执行台、日志审计和验收问题单展示同一error_code，不允许只展示“未知错误”。第三方原始错误可以保留，但必须映射为系统内部错误码。", body))
    story.append(tbl([
        ["字段", "要求"],
        ["error_code", "机器可识别错误码，稳定不随文案变化。"],
        ["error_message", "面向用户/运维的简短中文说明。"],
        ["error_detail", "开发排障所需上下文，可脱敏。"],
        ["severity", "S1/S2/S3/S4 或 info/warn/error/fatal。"],
        ["module", "wechat_worker、ai_engine、vision、dafengche、feishu、control_plane等。"],
        ["suggested_action", "建议处理动作，例如重新登录微信、检查API Key、人工接管。"],
        ["trace_id", "串联一次任务、一次回复或一次外部调用的追踪ID。"],
    ], [38 * mm, 132 * mm], small))
    story.append(tbl([
        ["错误码", "含义", "建议动作"],
        ["WECHAT_LOGIN_EXPIRED", "微信桌面端登录失效。", "人工重新登录微信后恢复Worker。"],
        ["WECHAT_UI_ELEMENT_NOT_FOUND", "微信界面元素未找到。", "检查微信版本、窗口状态或重试任务。"],
        ["WECHAT_RATE_LIMIT", "微信出现操作频繁/限制提示。", "暂停相关任务，人工确认后恢复。"],
        ["WORKER_UI_LOCK_TIMEOUT", "微信UI串行锁等待超时。", "检查是否有卡住任务，必要时重启Worker。"],
        ["AI_MODEL_TIMEOUT", "文本模型超时或调用失败。", "转人工，检查模型服务和额度。"],
        ["VISION_LOW_CONFIDENCE", "图片识别置信度不足。", "转人工，不强行回复。"],
        ["DFC_AUTH_FAILED", "大风车鉴权失败。", "检查appKey/appSecret/IP白名单。"],
        ["FEISHU_NOTIFY_FAILED", "飞书通知失败。", "查看飞书机器人配置和错误日志。"],
        ["REMARK_CODE_CONFLICT", "备注短码冲突或绑定多人。", "暂停自动回复，人工核对。"],
        ["SEND_RESULT_UNKNOWN", "发送中断导致结果未知。", "不自动补发，人工查看微信实际发送结果。"],
    ], [40 * mm, 76 * mm, 54 * mm], small))

    story.append(p("10. 新验收重点", h1))
    story.append(tbl([
        ["编号", "用例", "通过标准"],
        ["S-01", "AI连续多轮接待", "客户持续提问时，AI可持续回复，不因固定轮次停止。"],
        ["S-02", "AI回复后等待用户", "AI发送成功后状态进入waiting_user_reply。"],
        ["S-03", "人工回复后等待用户", "销售人工回复被Worker识别后，状态进入sales_replied_waiting_user。"],
        ["S-04", "等待用户超时召回", "超过N天客户未回复，服务端生成follow_up_task，Worker发送召回。"],
        ["S-05", "多轮召回", "召回后客户仍未回复，到下一周期可再次召回。"],
        ["S-06", "用户回复终止召回", "客户回复后召回条件失效。"],
        ["S-07", "用户拒绝停止自动动作", "客户拒绝后，不回复、不召回、不加好友。"],
        ["S-08", "转人工等待销售", "AI转人工后进入waiting_sales_reply，AI不再自由回复。"],
        ["S-09", "销售超时飞书通知", "销售超过N天未回复，服务端发送飞书通知并记录结果。"],
        ["S-10", "Worker与服务端扫描分工", "Worker上报微信事实；服务端根据数据库状态生成召回和销售提醒。"],
        ["S-11", "移除备注短码关闭自动跟进", "Worker发现已绑定会话备注短码消失后，服务端进入closed。"],
        ["S-12", "线下好友加短码启动跟进", "销售生成短码并修改微信备注后，Worker识别并绑定，系统开始跟进。"],
        ["S-13", "找回原短码恢复跟进", "销售误删短码后找回原短码并加回备注，系统恢复原会话和历史上下文。"],
        ["S-14", "微信UI操作串行", "同时存在多个微信UI任务时，Worker必须按Local WeChat UI Lock串行执行。"],
        ["S-15", "错误码可解释", "任意失败、暂停、跳过、异常都必须展示稳定错误码、错误说明和建议处理动作。"],
    ], [18 * mm, 54 * mm, 98 * mm], small))

    def header_footer(canvas, _doc):
        canvas.saveState()
        canvas.setFont("STSong-Light", 8)
        canvas.setFillColor(colors.HexColor("#6B7280"))
        canvas.drawString(12 * mm, 287 * mm, f"{PROJECT_NAME} 技术方案手册 {DOC_VERSION}")
        canvas.drawRightString(198 * mm, 9 * mm, f"第 {canvas.getPageNumber()} 页")
        canvas.restoreState()

    doc.build(story, onFirstPage=header_footer, onLaterPages=header_footer)


def main() -> None:
    generate_md()
    generate_pdf()
    print(MD_PATH)
    print(PDF_PATH)


if __name__ == "__main__":
    main()
