@startuml
title AI智能客服售前跟进系统 会话状态机 v0.6
!pragma layout smetana

skinparam monochrome true
skinparam shadowing false
skinparam state {
  BorderColor #222222
  BackgroundColor #FFFFFF
  FontColor #222222
}

[*] --> new : 线索入库
new --> assigned : 分配销售/绑定Worker
assigned --> add_friend_blocked : 销售未绑定Worker
add_friend_blocked --> add_friend_pending : 后续绑定Worker
assigned --> add_friend_pending : 销售已绑定Worker
add_friend_pending --> add_friend_sent : 好友申请已发
add_friend_pending --> friend_added : 已是好友
add_friend_sent --> friend_added : 客户通过/会话绑定成功
friend_added --> ai_active : AI开始负责
friend_added --> sales_replied_waiting_user : 首次打开已存在销售人工消息\n取消AI主动开场

ai_active --> waiting_user_reply : AI回复成功
waiting_user_reply --> ai_active : 客户回复且AI仍负责
recalled_waiting_user --> ai_active : AI召回后客户正常回复

waiting_user_reply --> recall_precheck : N天未回复\norigin=waiting_user_reply
recalled_waiting_user --> recall_precheck : 下一召回周期到期\norigin=recalled_waiting_user
sales_replied_waiting_user --> recall_precheck : 销售回复后客户N天未回\norigin=sales_replied_waiting_user
recall_precheck --> ai_active : 读到客户新消息\n包括origin=sales_replied_waiting_user
recall_precheck --> waiting_sales_reply : 读到客户新消息且高意向/高风险/需人工
recall_precheck --> recalled_waiting_user : precheck确认无新客户消息且follow_up发送成功
recall_precheck --> waiting_user_reply : precheck失败且origin=waiting_user_reply
recall_precheck --> recalled_waiting_user : precheck失败且origin=recalled_waiting_user
recall_precheck --> sales_replied_waiting_user : precheck失败且origin=sales_replied_waiting_user

ai_active --> waiting_sales_reply : 高意向/高风险/模型失败/低置信
waiting_user_reply --> waiting_sales_reply : 客户回复后需人工处理
recalled_waiting_user --> waiting_sales_reply : 召回后客户高意向/高风险
waiting_sales_reply --> sales_replied_waiting_user : 销售人工回复
sales_replied_waiting_user --> ai_active : 客户再次回复，交回AI判断

ai_active --> rejected : 客户拒绝
waiting_user_reply --> rejected : 客户拒绝
recalled_waiting_user --> rejected : 客户拒绝
waiting_sales_reply --> rejected : 客户拒绝
sales_replied_waiting_user --> rejected : 客户拒绝
recall_precheck --> rejected : precheck读到客户拒绝

ai_active --> closed : 备注短码移除/人工关闭
waiting_user_reply --> closed : 备注短码移除/人工关闭
recalled_waiting_user --> closed : 备注短码移除/人工关闭
waiting_sales_reply --> closed : 备注短码移除/人工关闭
sales_replied_waiting_user --> closed : 备注短码移除/人工关闭
recall_precheck --> closed : 备注短码移除/人工关闭

rejected --> [*]
closed --> [*]
@enduml
